--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 <div id="directions">
 	<p>You will be given a random number at the start of the game.</p>
 	<p>There are four magical items below. By clicking on an item you will add a specific amount of points to your total score.</p>
-	<p>You will win the game by matching your total score to the random number, you lose the game if your total score goes above the randowm number.</p>
+	<p>You will win the game by matching your total score to the random number, you lose the game if your total score goes 
+		above the random number.</p>
 	<p>The value of each magical item is hidden from you until you click on it.</p>
 	<p>Each time the game starts, the value of the magical item will change.</p>
 </div>
